--- a/stream/templates/logout.html
+++ b/stream/templates/logout.html
@@ -14,12 +14,12 @@
 
         <div class="flex flex-col gap-4 w-64 mx-auto">
             <a href="{% url 'login' %}" 
-               class="bg-[#FFFFFF] text-black font-extrabold py-3.5 rounded-lg hover:brightness-110 transition shadow-lg shadow-primary/10">
+               class="bg-[#FFA629] text-black font-extrabold py-3.5 rounded-lg hover:brightness-110 transition shadow-lg shadow-primary/10">
                 Login again
             </a>
             
             <a href="/" 
-               class="bg-zinc-700/50 text-white font-bold py-3.5 rounded-lg hover:bg-zinc-700 transition">
+               class="bg-gray-200/50 text-white font-bold py-3.5 rounded-lg hover:bg-zinc-700 transition">
                 Go to Homepage
             </a>
         </div>
